flux/apps/production/legacy-server/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: legacy-server
  namespace: apps-legacy-server
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`nextdracool.com`, `www.nextdracool.com`, `git.nextdracool.com`, `media.nextdracool.com`, `cloud.nextdracool.com`, `host.nextdracool.com`, `docker.nextdracool.com`, `monitoring.nextdracool.com`)
    kind: Rule
    services:
    - name: legacy-server
      namespace: apps-legacy-server
      port: 443
      serversTransport: legacy-server
  tls:
    secretName: certificate-legacy-server
